# ChangeLog for media-plugins/audacious-dumb
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-plugins/audacious-dumb/ChangeLog,v 1.35 2011/01/20 16:06:16 joker Exp $

*audacious-dumb-0.65 (20 Jan 2011)

  20 Jan 2011; Christian Birchinger <joker@gentoo.org>
  +audacious-dumb-0.65.ebuild:
  New version for Audacious 2.4.3

  16 Dec 2010; Christian Birchinger <joker@gentoo.org>
  -audacious-dumb-0.62.ebuild:
  Remove old version that wont work with recent Audacious

*audacious-dumb-0.64 (11 Sep 2010)

  11 Sep 2010; Christian Birchinger <joker@gentoo.org>
  +audacious-dumb-0.64.ebuild:
  New version for Audacious 2.4

  11 Sep 2010; Christian Birchinger <joker@gentoo.org>
  -audacious-dumb-0.57.ebuild, -audacious-dumb-0.60.ebuild,
  audacious-dumb-0.62.ebuild:
  Removed no longer working versions. Adjusting the dependency version.

*audacious-dumb-0.62 (13 Jan 2010)

  13 Jan 2010; Christian Birchinger <joker@gentoo.org>
  +audacious-dumb-0.62.ebuild:
  Version bump. Fixes an issue that can be triggered by the recent ALSA
  output plugin.

*audacious-dumb-0.60 (10 Jan 2010)

  10 Jan 2010; Christian Birchinger <joker@gentoo.org>
  +audacious-dumb-0.60.ebuild:
  New version with Audacious 2.2 support

  04 Oct 2009; Sebastian Pipping <sping@gentoo.org> ChangeLog:
  Add blocker on Audacious 2.2 series (permission by joker)

  06 May 2008; Christian Birchinger <joker@gentoo.org>
  audacious-dumb-0.57.ebuild:
  Removed pkgconfig from RDEPEND

  27 Apr 2008; Christian Birchinger <joker@gentoo.org>
  -audacious-dumb-0.56.ebuild:
  Removed old version

  09 Apr 2008; Markus Meier <maekke@gentoo.org> audacious-dumb-0.57.ebuild:
  x86 stable, bug #216660

  07 Apr 2008; Christian Birchinger <joker@gentoo.org>
  audacious-dumb-0.57.ebuild:
  Stable on amd64, bug #216660

  03 Mar 2008; Christoph Mende <angelos@gentoo.org>
  audacious-dumb-0.56.ebuild:
  Stable on amd64, bug #206061
