@@ -1,6 +1,4 @@
-DIST audacious-dumb-0.64.tar.gz 24562 RMD160 cd134d37397f2873e238fb831acf79b0a65a08be SHA1 d9b4b2fefeba8ce4b7026ee712e47b70b191cea4 SHA256 e2210a189847cc90ab622c9a81617305c064c177225d39f3834052ff40180793
 DIST audacious-dumb-0.65.tar.gz 24483 RMD160 42c40463f6d124a2793ccb49b5fd98674ece2382 SHA1 79168e24f9f06e61c564ca8574aedd38c70cf66d SHA256 5b27718179634b61cad9843be4ff70b23a9be2f50134d5594e7ce329c1907c0d
-EBUILD audacious-dumb-0.64.ebuild 680 RMD160 fe6b3adbc9d107243a89f0476864c29515012e71 SHA1 5c5163a4ace6214ec9d80241570f932719c4539f SHA256 7b846ca5c6c56d04aa061468b914b2b4fdeed3f51f71d96f4981da5d376f13bf
 EBUILD audacious-dumb-0.65.ebuild 779 RMD160 d2fd62bce85031ff5786589139eef26a85d5225e SHA1 2b4426469063edd3c756ab565eece24b47ea5ab6 SHA256 9ea54697c80996798a567135d0d57edc9a99f02c41e570838fa819e001bc0bcb
-MISC ChangeLog 5104 RMD160 c27ea7625f692924ff95836e6721c751f01fd6cc SHA1 c842b8976220b57f26deeaf7e6d8bfa185f7738a SHA256 33b6abed8d09401c4518ddd4492ab709ba2bd2693ae84926f0a7a5fe9dd93083
+MISC ChangeLog 5212 RMD160 b96c2fa66ca730d00619828fe48302f44e2b6d7a SHA1 c1a039ef75ba16925333eb019f0c5e091ce340fe SHA256 767aa69d72b4f851172a6efc60d88a3778a20d52bd692e5436f908206235042d
 MISC metadata.xml 251 RMD160 57bef9027e07a80633e99023903f4de9332f52d4 SHA1 da26e36e44561eb0d30b22bf6787705ae5c3d4b3 SHA256 c6bc54aeb1244159055765e01a1d89c4bf47fa956a3e065de5f4d4b7b24a6753
